# chatterbot-corpus

./: .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  dev-requirements.txt  diff.xml  filetypes.xml  ignore.xml  license.md  markdown_navigator.shared.xml  multimarkdown.shared.xml  package.json  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-documentation.yml  python-package.yml
chatterbot_corpus/: __init__.py  botprofile.corpus.json  corpus.py  emotions.corpus.json
chatterbot_corpus/data/: Prueba.yml
chatterbot_corpus/data/arabic/: ai.yml  botprofile.yml  computers.yml  conversations.yml  emotion.yml  food.yml  gossip.yml  greetings.yml  health.yml  history.yml  humor.yml  literature.yml  money.yml  movies.yml  politics.yml  psychology.yml  science.yml  sports.yml  trivia.yml
chatterbot_corpus/data/bangla/: aboutbot.yml  botprofile.corpus.json  botprofile.yml  computer.corpus.json  computer.yml  emotions.yml  greetings.yml
chatterbot_corpus/data/bengali/: botprofile.yml  food.yml
corpus/: __init__.py
corpus/tchinese/: politics.corpus.json
data/tchinese/: emotion.corpus.json  science.corpus.json  sports.corpus.json
docs/: api.rst  conf.py  contributing.rst  corpus.rst  data.rst  index.rst  installation.rst  languages.rst  usage.rst
docs/_ext/: github.py
docs/_static/: style.css
docs/_templates/: layout.html
tests/: base_case.py  test_corpus.py  test_data.py
tests/corpus_tests/: test_corpus.py
tests/training_tests/: test_chatterbot_corpus_training.py
(+303 files in other folders)
